--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -180,7 +180,7 @@ br {
 .nav-sub {
   display:none;
   position: fixed;
-  top: 57px;
+  top: 56px;
   background-color: @gray800;
   z-index: 998;
   .box-shadow;
@@ -311,7 +311,7 @@ br {
 
 .btn-md {
   font-size: 14px;
-  padding: 12px 18px;
+  padding: 13px 18px 11px 18px;
   border-radius: 48px;
 }
 
@@ -371,7 +371,75 @@ button:focus {
     outline: none;
 }
 
-/* -- ui elements --*/
+/* Customize the label (the container) */
+.wrap-checkbox-item {
+  display: block;
+  position: relative;
+  padding-left: 1.7em;
+  cursor: pointer;
+  font-size: 0.9em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.wrap-checkbox-item input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1.4em;
+  width: 1.4em;
+  background-color: #eee;
+  border-radius: 0.2em;
+}
+
+/* On mouse-over, add a grey background color */
+.wrap-checkbox-item:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.wrap-checkbox-item input:checked ~ .checkmark {
+  background-color: @orange800;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.wrap-checkbox-item input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.wrap-checkbox-item .checkmark:after {
+  left: 6px;
+  top: 2px;
+  width: 5px;
+  height: 9px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/* -- ui elements - end --*/
 
 .block {
   padding: 18px 0;
@@ -1601,14 +1669,34 @@ button:focus {
   }
 }
 
-.press-releases {
+.press-releases,
+.company-news {
   .block-input {
-    margin-bottom: 0.6em;
-    text-align: center;
+    padding-bottom: 1.2em;
+    border-bottom: 1px solid @gray300;
+    text-align: left;
+    position:relative;
+
+    .wrap-checkbox-item {
+      display: inline-block;
+      color: @gray700;
+      margin-left: 1em;
+
+      .input-inline {
+        margin-right: 0.5em;
+      }
+    }
+
+    .block-btn {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
   }
 }
 
-.press-releases-table {
+.press-releases-table,
+.company-news-table {
   table-layout: fixed;
   border: 0;
   border-collapse: collapse;
@@ -1619,7 +1707,7 @@ button:focus {
 
   td {
     border-bottom: 1px solid @gray300;
-    padding: 1.5em 0;
+    padding: 1.8em 0;
   }
 
   .photo {
@@ -1637,70 +1725,26 @@ button:focus {
   .title {
     .press-title {
       text-align: left;
-      margin-top: 0;
-      margin-bottom: 0.5em;
+      margin: 0;
+      padding: 0;
     }
 
     .press-summary {
       color: @gray600;
       font-size: 0.9em;
-      margin-top: 0.5em;
+      margin-top: 1em;
+      margin-bottom: 0;
+      line-height: 1.7;
     }
 
     .date {
-      font-size: 0.8em;
-      margin: 0;
-      padding: 0;
-    }
-  }
-
-  .btn {
-    width: 5em;
-    text-align: right;
-
-    .btn-text {
-      color: @orange800;
-      font-size: 0.8em;
-      padding-right: 1em;
-    }
-
-    .btn-text:hover {
-      text-decoration: underline;
-    }
-  }
-}
-
-.company-news-table {
-  table-layout: fixed;
-  border: 0;
-  border-collapse: collapse;
-
-  tbody tr:hover {
-    background-color: @gray200;
-  }
-
-  td {
-    border-bottom: 1px solid @gray300;
-    padding: 1.5em 0;
-  }
-
-  .title {
-    .press-title {
-      text-align: left;
+      color: @gray700;
+      font-size: 0.85em;
+      font-weight: bold;
       margin-top: 0;
-      margin-bottom: 0.5em;
-    }
-
-    .press-summary {
-      color: @gray600;
-      font-size: 0.9em;
-      margin-top: 0.5em;
-    }
-
-    .date {
-      font-size: 0.8em;
-      margin: 0;
+      margin-bottom: 1em;
       padding: 0;
+      text-transform: uppercase;
     }
   }
 
