--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -30,6 +30,8 @@
 .ic-members            { background-image: url('../images/ic-md-members.svg'); }
 .ic-focus            { background-image: url('../images/ic-md-focus.svg'); }
 .ic-faq            { background-image: url('../images/ic-md-faq.svg'); }
+.ic-press            { background-image: url('../images/ic-md-press.svg'); }
+.ic-stars            { background-image: url('../images/ic-md-stars.svg'); }
 
 
 .ic-logo-deutsche-leasing { background-image: url('../images/ic-logo-deutsche-leasing.svg'); }
