--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -234,17 +234,18 @@ br {
 
 .nav-sub-solutions {
   .nav-wrap-items {
-    width: 450px;
+    width: 800px;
   }
 
   .nav-item-main {
-    width: 200px !important;
+    width: 150px !important;
+    overflow-wrap: normal;
   }
 
   .nav-wrap-items {
     position: relative;
     left: 50%;
-    margin-left: -398px;
+    margin-left: -565px;
   }
 }
 
@@ -262,17 +263,17 @@ br {
 
 .nav-sub-company {
   .nav-wrap-items {
-    width: 400px;
+    width: 800px;
   }
 
   .nav-item-main {
-    width: 170px !important;
+    width: 150px !important;
   }
 
   .nav-wrap-items {
     position: relative;
     left: 50%;
-    margin-left: -67px;
+    margin-left: -565px;
   }
 }
 
