--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -215,6 +215,11 @@ br {
         padding-bottom: 0.8em;
         font-size: 0.8em;
         line-height: 1.5;
+        .transition;
+      }
+
+      li:hover {
+        color: @orange800;
       }
     }
   }
@@ -1021,7 +1026,7 @@ button:focus {
 }
 
 .block-header-sub {
-  height: 400px;
+  height: 350px;
   margin-top: 60px;
   position: relative;
 
