--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -542,7 +542,7 @@ br {
   margin-left: -565px;
 }
 .display {
-  display: block;
+  display: block !important;
 }
 .container-fluid {
   width: 100%;
@@ -558,6 +558,46 @@ br {
   color: #fff !important;
   margin-bottom: 32px;
 }
+.bg-fw-half-left {
+  color: #fff;
+  width: 50%;
+  height: 20em;
+  position: absolute;
+  left: 0;
+  z-index: 0;
+}
+.bg-fw-half-right {
+  color: #fff;
+  width: 50%;
+  height: 20em;
+  position: absolute;
+  right: 0;
+  z-index: 0;
+}
+.bg-color-gray800 {
+  color: #fff;
+  background-color: #2A3141;
+}
+.bg-color-orange800 {
+  color: #fff;
+  background-color: #004bb7;
+}
+.bg-color-red {
+  color: #fff;
+  background-color: red;
+}
+.bg-color-green {
+  color: #fff;
+  background-color: #BACC54;
+}
+.bg-color-blue {
+  color: #fff;
+  background-color: #004bb7;
+}
+.bg-color-orange {
+  color: #fff;
+  background-color: #EF7E53;
+}
 /* -- ui elements --*/
 .btn {
   border: 0;
@@ -570,9 +610,10 @@ br {
   font-family: 'Acumin Pro', sans-serif;
 }
 .btn-sm {
-  font-size: 14px;
-  padding: 9px 14px 7px 14px;
+  font-size: 12px;
+  padding: 8px 14px 7px 14px;
   border-radius: 48px;
+  font-family: 'Acumin Pro', sans-serif;
 }
 .btn-default {
   color: #fff;
@@ -1019,46 +1060,6 @@ button:focus {
   background-position: center center;
   background-size: cover;
 }
-.bg-fw-half-left {
-  color: #fff;
-  width: 50%;
-  height: 20em;
-  position: absolute;
-  left: 0;
-  z-index: 0;
-}
-.bg-fw-half-right {
-  color: #fff;
-  width: 50%;
-  height: 20em;
-  position: absolute;
-  right: 0;
-  z-index: 0;
-}
-.bg-color-gray800 {
-  color: #fff;
-  background-color: #2A3141;
-}
-.bg-color-orange800 {
-  color: #fff;
-  background-color: #004bb7;
-}
-.bg-color-red {
-  color: #fff;
-  background-color: red;
-}
-.bg-color-green {
-  color: #fff;
-  background-color: #BACC54;
-}
-.bg-color-blue {
-  color: #fff;
-  background-color: #004bb7;
-}
-.bg-color-orange {
-  color: #fff;
-  background-color: #EF7E53;
-}
 .il-index-locations {
   height: 30em;
   background-size: auto 100%;
@@ -1359,15 +1360,52 @@ button:focus {
   color: #787E8D;
   margin: 0 0 24px 0;
   padding: 0;
-  font-size: 0.9em;
+  font-size: 1em;
   list-style: none;
+  font-family: 'Sofia Pro', sans-serif;
+  letter-spacing: -0.005em;
 }
 .sub-menu li {
   margin-bottom: 5px;
-  font-weight: 600;
+  text-transform: uppercase;
+}
+.sub-menu .active {
+  color: #004bb7;
+}
+.wrap-sub-menu-alt {
+  display: none;
+  color: #fff;
+  position: fixed;
+  top: 56px;
+  width: 100%;
+  height: 58px;
+  padding-top: 0.5em;
+  background-color: #2A3141;
+  z-index: 1;
+  -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  font-family: 'Sofia Pro', sans-serif;
+  letter-spacing: -0.005em;
+  transition: all 0.5s;
+}
+.wrap-sub-menu-alt ul {
+  display: inline-block;
+  margin: 0 2em 0 0;
+  padding: 0;
+}
+.wrap-sub-menu-alt ul li {
+  display: inline-block;
+  margin-right: 2em;
+  color: #9AA0AD;
+  text-transform: uppercase;
+  font-size: 0.9em;
+}
+.block-user-story {
+  margin-bottom: 36px;
 }
 .block-user-story .wrap-content {
-  margin: 36px 0;
+  margin-top: 30px;
   padding-bottom: 30px;
   border-bottom: 1px solid #E2E5EB;
 }
@@ -1376,6 +1414,7 @@ button:focus {
   padding: 0;
   font-size: 1.8em;
   text-align: left;
+  line-height: 1.2;
   font-family: 'Sofia Pro', sans-serif;
   letter-spacing: -0.005em;
 }
@@ -1383,11 +1422,15 @@ button:focus {
   color: #004bb7;
   text-align: left;
 }
-.block-user-story .wrap-content p {
+.block-user-story .wrap-content p,
+.block-user-story .wrap-content .paragraph {
   color: #9AA0AD;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.6;
+}
+.block-user-story .wrap-content-alt {
+  margin-top: 0;
 }
 .block-user-story .headcopy {
   color: #004bb7;
@@ -1897,4 +1940,42 @@ section.company-news {
 .press-releases-table .btn .btn-text:hover,
 .company-news-table .btn .btn-text:hover {
   text-decoration: underline;
+}
+.block-lists {
+  padding-top: 1em;
+  margin-bottom: -36px;
+}
+.block-lists .wrap-item {
+  margin-bottom: 1em;
+  padding-bottom: 0.9em;
+  border-bottom: 1px solid #E2E5EB;
+  position: relative;
+}
+.block-lists .wrap-item .click {
+  cursor: pointer;
+}
+.block-lists .wrap-item h3 {
+  display: inline-block;
+  font-size: 1.3em;
+  padding: 0.3em 0;
+}
+.block-lists .wrap-item .arrow {
+  top: 0.3em;
+  right: 2em;
+  position: absolute;
+}
+.block-lists .wrap-item .active {
+  top: 0.15em;
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+.block-lists .wrap-item .paragraph {
+  display: none;
+}
+.block-lists .wrap-item .paragraph .btn-more {
+  margin-bottom: 0.5em;
+}
+.block-lists .wrap-item:last-of-type {
+  border-bottom: 0;
 }
