--- a/embold-blue.com/css/embold.less
+++ b/embold-blue.com/css/embold.less
@@ -288,7 +288,7 @@ br {
 }
 
 .display {
-  display: block;
+  display: block !important;
 }
 
 .container-fluid {
@@ -313,6 +313,54 @@ br {
   }
 }
 
+.bg-fw-half-left {
+  color: @white;
+  width: 50%;
+  height: 20em;
+  position: absolute;
+  left: 0;
+  z-index: 0;
+}
+
+.bg-fw-half-right {
+  color: @white;
+  width: 50%;
+  height: 20em;
+  position: absolute;
+  right: 0;
+  z-index: 0;
+}
+
+.bg-color-gray800 {
+  color: @white;
+  background-color: @gray800;
+}
+
+.bg-color-orange800 {
+  color: @white;
+  background-color: @blue800;
+}
+
+.bg-color-red {
+  color: @white;
+  background-color: red;
+}
+
+.bg-color-green {
+  color: @white;
+  background-color: @green800;
+}
+
+.bg-color-blue {
+  color: @white;
+  background-color: @blue800;
+}
+
+.bg-color-orange {
+  color: @white;
+  background-color: @orange800;
+}
+
 /* -- ui elements --*/
 
 .btn {
@@ -328,9 +376,10 @@ br {
 }
 
 .btn-sm {
-  font-size: 14px;
-  padding: 9px 14px 7px 14px;
+  font-size: 12px;
+  padding: 8px 14px 7px 14px;
   border-radius: 48px;
+  .acumin;
 }
 
 .btn-default {
@@ -844,54 +893,6 @@ button:focus {
   }
 }
 
-.bg-fw-half-left {
-  color: @white;
-  width: 50%;
-  height: 20em;
-  position: absolute;
-  left: 0;
-  z-index: 0;
-}
-
-.bg-fw-half-right {
-  color: @white;
-  width: 50%;
-  height: 20em;
-  position: absolute;
-  right: 0;
-  z-index: 0;
-}
-
-.bg-color-gray800 {
-  color: @white;
-  background-color: @gray800;
-}
-
-.bg-color-orange800 {
-  color: @white;
-  background-color: @blue800;
-}
-
-.bg-color-red {
-  color: @white;
-  background-color: red;
-}
-
-.bg-color-green {
-  color: @white;
-  background-color: @green800;
-}
-
-.bg-color-blue {
-  color: @white;
-  background-color: @blue800;
-}
-
-.bg-color-orange {
-  color: @white;
-  background-color: @orange800;
-}
-
 .il-index-locations {
   height: 30em;
   background-size: auto 100%;
@@ -1209,18 +1210,54 @@ button:focus {
   color: @gray700;
   margin: 0 0 24px 0;
   padding: 0;
-  font-size: 0.9em;
+  font-size: 1em;
   list-style: none;
+  .sofia;
 
   li {
     margin-bottom: 5px;
-    font-weight: 600;
+    text-transform: uppercase;
+  }
+
+  .active {
+    color: @blue800;
+  }
+}
+
+.wrap-sub-menu-alt {
+  display: none;
+  color: @white;
+  position: fixed;
+  top: 56px;
+  width: 100%;
+  height: 58px;
+  padding-top: 0.5em;
+  background-color: @gray800;
+  z-index: 1;
+  .box-shadow;
+  .sofia;
+  .transition;
+
+  ul {
+    display: inline-block;
+    margin: 0 2em 0 0;
+    padding: 0;
+
+    li {
+      display: inline-block;
+      margin-right: 2em;
+      color: @gray600;
+      text-transform: uppercase;
+      font-size: 0.9em;
+    }
   }
 }
 
 .block-user-story {
+  margin-bottom: 36px;
+
   .wrap-content {
-    margin: 36px 0;
+    margin-top: 30px;
     padding-bottom: 30px;
     border-bottom: 1px solid @gray400;
 
@@ -1229,6 +1266,7 @@ button:focus {
       padding: 0;
       font-size: 1.8em;
       text-align: left;
+      line-height: 1.2;
       .sofia;
     }
 
@@ -1237,12 +1275,17 @@ button:focus {
       text-align: left;
     }
 
-    p {
+    p,
+    .paragraph {
       color: @gray600;
       font-size: 1rem;
       font-weight: 400;
       line-height: 1.6;
     }
+  }
+
+  .wrap-content-alt {
+    margin-top: 0;
   }
 
   .headcopy {
@@ -1812,5 +1855,52 @@ section.company-news {
     .btn-text:hover {
       text-decoration: underline;
     }
+  }
+}
+
+.block-lists {
+  padding-top: 1em;
+  margin-bottom: -36px;
+
+  .wrap-item {
+    margin-bottom: 1em;
+    padding-bottom: 0.9em;
+    border-bottom: 1px solid @gray400;
+    position: relative;
+
+    .click {
+      cursor: pointer;
+    }
+
+    h3 {
+      display: inline-block;
+      font-size: 1.3em;
+      padding: 0.3em 0;
+    }
+
+    .arrow {
+      top: 0.3em;
+      right: 2em;
+      position: absolute;
+    }
+
+    .active {
+      top: 0.15em;
+      -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+      transform: rotate(180deg);
+    }
+
+    .paragraph {
+      display: none;
+
+      .btn-more {
+        margin-bottom: 0.5em;
+      }
+    }
+  }
+
+  .wrap-item:last-of-type {
+    border-bottom: 0;
   }
 }
