RSS Icon adding

--- a/embold-blue.com/css/color-chart.less
+++ b/embold-blue.com/css/color-chart.less
@@ -3,8 +3,8 @@
 @gray300: #ECEDEF;
 @gray400: #E2E5EB;
 @gray500: #D0D4E0;
-@gray600: #9AA0AD;
-@gray700: #787E8D;
+@gray600: #A8ACB4;
+@gray700: #7C808B;
 @gray800: #2A3141;
 @gray900: #111317;
 
