--- a/embold-blue.com/css/icons.less
+++ b/embold-blue.com/css/icons.less
@@ -6,6 +6,7 @@
 .ic-sm-user-architect-wh { background-image: url('../images/ic-sm-user-architect-wh.svg'); }
 .ic-sm-user-pm        { background-image: url('../images/ic-sm-user-pm.svg'); }
 .ic-sm-user-pm-wh        { background-image: url('../images/ic-sm-user-pm-wh.svg'); }
+.ic-sm-copy        { background-image: url('../images/ic-sm-copy.svg'); }
 
 .ic-door-open         { background-image: url('../images/ic-md-door-open.svg'); }
 .ic-star-glow         { background-image: url('../images/ic-md-star-glow.svg'); }
