--- a/embold-blue.com/css/modal.less
+++ b/embold-blue.com/css/modal.less
@@ -65,9 +65,14 @@
       width: 100%;
       padding: 0.6em;
       background-color: @gray300;
+      background-image: url('../images/ic-sm-copy.svg');
+      background-repeat: no-repeat;
+      background-size: 24px 24px;
+      background-position: center right 4px;
       border: 0;
       border-radius: 4px;
       font-size: 0.8em;
+      cursor: pointer;
     }
   }
 }
