--- a/embold.com/css/color-chart.less
+++ b/embold.com/css/color-chart.less
@@ -3,8 +3,8 @@
 @gray300: #ECEDEF;
 @gray400: #E2E5EB;
 @gray500: #D0D4E0;
-@gray600: #9AA0AD;
-@gray700: #787E8D;
+@gray600: #A8ACB4;
+@gray700: #7C808B;
 @gray800: #2A3141;
 @gray900: #111317;
 
@@ -12,6 +12,10 @@
 
 @orange800: #EF7E53;
 @orange900: #E26640;
+
+@blue700: #1b69c7;
+@blue800: #004bb7;
+@blue900: #004393;
 
 @yellow800: #F5B54D;
 @purple800: #CC61A8;
