--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -382,6 +382,226 @@
   font-size: 0.8em;
   cursor: pointer;
 }
+.workflow-hover-effect .wrap-text {
+  top: 210px;
+  padding-bottom: 50px;
+  transition: all 0.5s;
+}
+.workflow-hover-effect .wrap-text .step-number {
+  color: #fff;
+  background-color: #004bb7;
+}
+.workflow-hover-effect .description {
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.5s;
+}
+.block-index-workflow {
+  height: 720px;
+  background-color: #F5F6F8;
+}
+.block-index-workflow .workflow-1:hover .wrap-animation .logo-github {
+  left: 4em;
+}
+.block-index-workflow .workflow-1:hover .wrap-animation .logo-bitbucket {
+  right: 1em;
+}
+.block-index-workflow .workflow-1:hover .wrap-animation .logo-jenkins {
+  left: 1.8em;
+}
+.block-index-workflow .workflow-1:hover .wrap-text {
+  top: 210px;
+  padding-bottom: 50px;
+  transition: all 0.5s;
+}
+.block-index-workflow .workflow-1:hover .wrap-text .step-number {
+  color: #fff;
+  background-color: #004bb7;
+}
+.block-index-workflow .workflow-1:hover .description {
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.5s;
+}
+.block-index-workflow .workflow-2:hover .wrap-text {
+  top: 210px;
+  padding-bottom: 50px;
+  transition: all 0.5s;
+}
+.block-index-workflow .workflow-2:hover .wrap-text .step-number {
+  color: #fff;
+  background-color: #004bb7;
+}
+.block-index-workflow .workflow-2:hover .description {
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.5s;
+}
+.block-index-workflow .workflow-3:hover .wrap-animation .index-step-3 {
+  background-image: url('../images/index-step-3-animate.svg');
+}
+.block-index-workflow .workflow-3:hover .wrap-text {
+  top: 210px;
+  padding-bottom: 50px;
+  transition: all 0.5s;
+}
+.block-index-workflow .workflow-3:hover .wrap-text .step-number {
+  color: #fff;
+  background-color: #004bb7;
+}
+.block-index-workflow .workflow-3:hover .description {
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.5s;
+}
+.block-index-workflow .wrap-workflow {
+  width: 100%;
+  border-radius: 8px;
+  position: relative;
+  text-align: center;
+}
+.block-index-workflow .wrap-workflow .wrap-animation {
+  height: 240px;
+  position: relative;
+}
+.block-index-workflow .wrap-workflow .wrap-animation .item-logo {
+  height: 60px;
+  background-color: #fff;
+  margin-bottom: 0.8em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  transition: all 0.5s;
+}
+.block-index-workflow .wrap-workflow .wrap-animation .logo-github {
+  width: 140px;
+  left: 3em;
+  position: absolute;
+  background-image: url('../images/logo-github.svg');
+  background-size: 90% auto;
+}
+.block-index-workflow .wrap-workflow .wrap-animation .logo-bitbucket {
+  width: 200px;
+  top: 72px;
+  right: 0.5em;
+  position: absolute;
+  background-image: url('../images/logo-bitbucket.svg');
+  background-size: 70% auto;
+}
+.block-index-workflow .wrap-workflow .wrap-animation .logo-jenkins {
+  width: 160px;
+  top: 144px;
+  left: 1em;
+  position: absolute;
+  background-image: url('../images/logo-jenkins.svg');
+  background-size: 70% auto;
+}
+.block-index-workflow .wrap-workflow .wrap-animation .logo-embold {
+  width: 80%;
+  height: 140px;
+  margin-left: 10%;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-image: url('../images/logo-embold.svg');
+  background-size: 70% auto;
+  position: absolute;
+  top: 35px;
+  -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+}
+.block-index-workflow .wrap-workflow .wrap-animation .index-step-3 {
+  width: 200px;
+  height: 200px;
+  margin: auto auto;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-image: url('../images/index-step-3.svg');
+  background-size: auto 100%;
+  border-radius: 8px;
+}
+.block-index-workflow .wrap-workflow .wrap-text {
+  top: 250px;
+  position: absolute;
+}
+.block-index-workflow .wrap-workflow .icon {
+  display: block;
+  margin: 0 auto;
+}
+.block-index-workflow .wrap-workflow .step-number {
+  display: inline-block;
+  color: #A8ACB4;
+  width: 1.2em;
+  height: 1.3em;
+  font-size: 2.4em;
+  margin: 0.4em;
+  font-weight: 300;
+  border-radius: 0.7em;
+  font-family: 'Sofia Pro', sans-serif;
+  letter-spacing: -0.005em;
+  transition: all 0.5s;
+}
+.block-index-workflow .wrap-workflow .step-title {
+  margin: -9px 0 0 0;
+  padding: 0;
+  font-size: 1.2em;
+  font-family: 'Sofia Pro', sans-serif;
+  letter-spacing: -0.005em;
+}
+.block-index-workflow .wrap-workflow .description {
+  visibility: hidden;
+  color: #A8ACB4;
+  font-size: 0.9em;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.block-index-workflow .wrap-workflow .workflow-flowline,
+.block-index-workflow .wrap-workflow .workflow-flowcircle-left,
+.block-index-workflow .wrap-workflow .workflow-flowcircle-right {
+  top: 50%;
+  position: absolute;
+}
+.block-index-workflow .wrap-workflow .workflow-flowcircle-left,
+.block-index-workflow .wrap-workflow .workflow-flowcircle-right {
+  width: 16px;
+  height: 16px;
+  margin-left: -8px;
+  margin-top: -6px;
+}
+.block-index-workflow .wrap-workflow .workflow-flowline {
+  display: inline-block;
+  width: 2.8em;
+  height: 4px;
+  background-color: #004bb7;
+  left: 100%;
+}
+.block-index-workflow .wrap-workflow .workflow-flowcircle-right {
+  display: inline-block;
+  background-color: #fff;
+  border: 4px solid #004bb7;
+  border-radius: 13px;
+  left: 100%;
+}
+.block-index-workflow .wrap-workflow .workflow-flowcircle-left {
+  display: inline-block;
+  background-color: #fff;
+  border: 4px solid #004bb7;
+  border-radius: 13px;
+  left: 0;
+}
+.block-index-workflow .active {
+  color: #fff !important;
+  background-color: #004bb7;
+}
+.block-index-workflow .active .step-number,
+.block-index-workflow .active .step-title,
+.block-index-workflow .active .description {
+  color: #fff;
+}
 /* -- prefix --*/
 .sofia {
   font-family: 'Sofia Pro', sans-serif;
@@ -432,6 +652,9 @@
 }
 .display {
   display: block !important;
+}
+.position-relative {
+  position: relative;
 }
 .container-fluid {
   width: 100%;
@@ -510,7 +733,7 @@
 }
 .btn-default:hover,
 .btn-default:active {
-  background-color: #111317;
+  background-color: #151A24;
 }
 .btn-orange {
   color: #fff;
@@ -519,6 +742,14 @@
 .btn-orange:hover,
 .btn-orange:active {
   background-color: #004393;
+}
+.btn-dark {
+  color: #fff;
+  background-color: #151A24;
+}
+.btn-dark:hover,
+.btn-dark:active {
+  background-color: #111317;
 }
 .input {
   padding: 12px 18px;
@@ -572,7 +803,7 @@ h2 {
   letter-spacing: -0.025em;
 }
 h4 {
-  color: #787E8D;
+  color: #7C808B;
   font-size: 0.9rem;
   font-family: 'Sofia Pro', sans-serif;
   margin: 0 0 8px 0;
@@ -658,7 +889,7 @@ br {
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
 }
 .nav-sub .nav-menu-link {
-  color: #9AA0AD;
+  color: #A8ACB4;
   display: block;
   font-size: 0.9em;
   font-family: 'Sofia Pro', sans-serif;
@@ -811,7 +1042,7 @@ br {
   background-size: cover;
 }
 .block .block-description {
-  color: #9AA0AD;
+  color: #A8ACB4;
   width: 60%;
   margin: 0 auto 16px auto;
   font-size: 1rem;
@@ -829,8 +1060,15 @@ br {
 .block-bottom-area {
   padding-top: 3em;
 }
+.block-footer-contact {
+  height: 410px;
+}
+.block-footer-contact .bg-fw-half-left,
+.block-footer-contact .bg-fw-half-right {
+  height: 410px;
+}
 .block-footer {
-  color: #9AA0AD;
+  color: #A8ACB4;
   font-size: 13px;
   padding: 32px 0 48px 0;
   background-color: #F5F6F8;
@@ -847,7 +1085,7 @@ br {
   margin-bottom: 5px;
 }
 .block-copyright {
-  color: #9AA0AD;
+  color: #A8ACB4;
   font-size: 13px;
   padding: 14px 0 12px 0;
   background-color: #2A3141;
@@ -894,7 +1132,7 @@ br {
 }
 .block-index-hero .wrap-hero-content .description {
   width: 35em;
-  color: #787E8D;
+  color: #7C808B;
 }
 .block-index-hero .wrap-hero-content .wrap-sign-up {
   margin-top: 2em;
@@ -912,98 +1150,17 @@ br {
   right: 3em;
   z-index: 1;
 }
-.block-index-workflow {
-  background-color: #F5F6F8;
-}
-.block-index-workflow .wrap-workflow {
-  width: 100%;
-  background-color: #fff;
-  padding: 24px 16px 14px 16px;
-  border-radius: 8px;
-  position: relative;
-  text-align: center;
-  -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-  -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-}
-.block-index-workflow .wrap-workflow .icon {
-  display: block;
-  margin: 0 auto;
-}
-.block-index-workflow .wrap-workflow .step-number {
-  color: #9AA0AD;
-  font-size: 3em;
-  margin: 0;
-  padding: 0;
-  font-weight: 300;
-  font-family: 'Sofia Pro', sans-serif;
-  letter-spacing: -0.005em;
-}
-.block-index-workflow .wrap-workflow .step-title {
-  margin: -9px 0 0 0;
-  padding: 0;
-  font-size: 1.2em;
-  font-family: 'Sofia Pro', sans-serif;
-  letter-spacing: -0.005em;
-}
-.block-index-workflow .wrap-workflow .description {
-  color: #9AA0AD;
-  font-size: 0.9em;
-}
-.block-index-workflow .wrap-workflow .workflow-flowline,
-.block-index-workflow .wrap-workflow .workflow-flowcircle-left,
-.block-index-workflow .wrap-workflow .workflow-flowcircle-right {
-  top: 50%;
-  position: absolute;
-}
-.block-index-workflow .wrap-workflow .workflow-flowcircle-left,
-.block-index-workflow .wrap-workflow .workflow-flowcircle-right {
-  width: 16px;
-  height: 16px;
-  margin-left: -8px;
-  margin-top: -6px;
-}
-.block-index-workflow .wrap-workflow .workflow-flowline {
-  display: inline-block;
-  width: 2.8em;
-  height: 4px;
-  background-color: #004bb7;
-  left: 100%;
-}
-.block-index-workflow .wrap-workflow .workflow-flowcircle-right {
-  display: inline-block;
-  background-color: #fff;
-  border: 4px solid #004bb7;
-  border-radius: 13px;
-  left: 100%;
-}
-.block-index-workflow .wrap-workflow .workflow-flowcircle-left {
-  display: inline-block;
-  background-color: #fff;
-  border: 4px solid #004bb7;
-  border-radius: 13px;
-  left: 0;
-}
-.block-index-workflow .active {
-  color: #fff !important;
-  background-color: #004bb7;
-}
-.block-index-workflow .active .step-number,
-.block-index-workflow .active .step-title,
-.block-index-workflow .active .description {
-  color: #fff;
-}
 .block-index-partnership .partnership-review {
   position: relative;
   padding: 30px;
 }
 .block-index-partnership .partnership-review .paragraph {
-  color: #787E8D;
+  color: #7C808B;
   font-size: 24px;
   font-weight: 300;
 }
 .block-index-partnership .partnership-review .name {
-  color: #787E8D;
+  color: #7C808B;
   font-size: 17px;
   position: absolute;
   bottom: 30px;
@@ -1085,7 +1242,7 @@ br {
   -moz-filter: grayscale(0);
 }
 .block-index-user-stories .wrap-user:hover .description {
-  color: #787E8D;
+  color: #7C808B;
 }
 .block-index-user-stories .wrap-user:hover .link-arrow {
   opacity: 1;
@@ -1097,7 +1254,7 @@ br {
   background-size: auto 80%;
 }
 .block-index-features .description {
-  color: #9AA0AD;
+  color: #A8ACB4;
   margin-top: 5em;
   font-size: 1rem;
   font-weight: normal;
@@ -1118,7 +1275,7 @@ br {
   margin-bottom: 1.3em;
 }
 .block-index-user-role .block-index-user-role-item p.description {
-  color: #9AA0AD;
+  color: #A8ACB4;
   margin-top: 1.5em;
   font-size: 0.9em;
 }
@@ -1170,7 +1327,7 @@ br {
   letter-spacing: -0.005em;
 }
 .product-pricing .pricing-tab .pricing-description {
-  color: #9AA0AD;
+  color: #A8ACB4;
   font-size: 1em;
   margin: 0;
 }
@@ -1181,7 +1338,7 @@ br {
 }
 .product-pricing .pricing-tab:hover .pricing-description,
 .product-pricing .active .pricing-description {
-  color: #9AA0AD;
+  color: #A8ACB4;
 }
 .product-pricing .pricing-tab:hover .icon-md,
 .product-pricing .active .icon-md {
@@ -1349,7 +1506,7 @@ br {
   margin-top: 1.3em;
 }
 .block-section-sub .description {
-  color: #9AA0AD;
+  color: #A8ACB4;
   margin: 0 auto 16px auto;
   font-size: 1rem;
   font-weight: normal;
@@ -1430,7 +1587,7 @@ br {
   bottom: 40px;
 }
 .sub-menu {
-  color: #787E8D;
+  color: #7C808B;
   margin: 0 0 24px 0;
   padding: 0;
   font-size: 1em;
@@ -1470,7 +1627,7 @@ br {
 .wrap-sub-menu-alt ul li {
   display: inline-block;
   margin-right: 2em;
-  color: #9AA0AD;
+  color: #A8ACB4;
   text-transform: uppercase;
   font-size: 0.9em;
 }
@@ -1497,7 +1654,7 @@ br {
 }
 .block-user-story .wrap-content p,
 .block-user-story .wrap-content .paragraph {
-  color: #9AA0AD;
+  color: #A8ACB4;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.6;
@@ -1557,7 +1714,7 @@ br {
   list-style: none;
 }
 .technical-documentation .document-list li {
-  color: #787E8D;
+  color: #7C808B;
   font-size: 0.9em;
   line-height: 2.1;
   cursor: pointer;
@@ -1632,7 +1789,7 @@ br {
 }
 .team .member-big .member-detail .role {
   display: block;
-  color: #787E8D;
+  color: #7C808B;
   margin: -8px 0 16px 0;
   padding: 0;
   font-size: 1.2em;
@@ -1640,7 +1797,7 @@ br {
   letter-spacing: -0.005em;
 }
 .team .member-big .member-sns .icon-sns {
-  color: #787E8D;
+  color: #7C808B;
   margin-right: 0.4em;
   font-size: 1.6em;
 }
@@ -1678,7 +1835,7 @@ br {
 }
 .team .member-small .member-detail .role {
   display: block;
-  color: #787E8D;
+  color: #7C808B;
   margin: -8px 0 16px 0;
   padding: 0;
   font-size: 1em;
@@ -1690,7 +1847,7 @@ br {
   text-align: center;
 }
 .team .member-small .member-sns .icon-sns {
-  color: #9AA0AD;
+  color: #A8ACB4;
   margin-right: 0.4em;
   font-size: 1.3em;
 }
@@ -1864,7 +2021,7 @@ br {
   padding: 3.6em 4.8em 2.4em 2.4em;
 }
 .philosophy .paragraph {
-  color: #787E8D;
+  color: #7C808B;
   font-size: 1.3em;
   font-weight: 400;
   line-height: 1.6;
@@ -1873,7 +2030,7 @@ br {
 }
 .philosophy .author {
   padding-top: 3.5em;
-  color: #787E8D;
+  color: #7C808B;
 }
 .philosophy .author .name {
   display: block;
@@ -1895,7 +2052,7 @@ br {
 }
 .job-opening .job-opening-list .job-table .location {
   display: inline-block;
-  color: #787E8D;
+  color: #7C808B;
   width: 13rem;
   margin-right: 20px;
   font-size: 1em;
@@ -1909,7 +2066,7 @@ br {
 }
 .job-opening .job-opening-list .job-table .wrap-title .job-title,
 .job-opening .job-opening-list .job-table .wrap-title .location {
-  color: #9AA0AD;
+  color: #A8ACB4;
   font-size: 0.7em;
   font-weight: bold;
   text-transform: uppercase;
@@ -1930,7 +2087,7 @@ section.company-news .block-input {
 section.press-releases .block-input .wrap-checkbox-item,
 section.company-news .block-input .wrap-checkbox-item {
   display: inline-block;
-  color: #787E8D;
+  color: #7C808B;
   margin-left: 1em;
 }
 section.press-releases .block-input .wrap-checkbox-item .input-inline,
@@ -1983,7 +2140,7 @@ section.company-news {
 }
 .press-releases-table .title .press-summary,
 .company-news-table .title .press-summary {
-  color: #9AA0AD;
+  color: #A8ACB4;
   font-size: 0.9em;
   margin-top: 1em;
   margin-bottom: 0;
@@ -1991,7 +2148,7 @@ section.company-news {
 }
 .press-releases-table .title .date,
 .company-news-table .title .date {
-  color: #787E8D;
+  color: #7C808B;
   font-size: 0.85em;
   font-weight: bold;
   margin-top: 0;
