--- a/embold-blue.com/css/embold.less
+++ b/embold-blue.com/css/embold.less
@@ -6,6 +6,7 @@
 @import url("mosaic.less");
 @import url("icons.less");
 @import url("modal.less");
+@import url("index-steps.less");
 
 /* -- prefix --*/
 
@@ -67,6 +68,10 @@
 
 .display {
   display: block !important;
+}
+
+.position-relative {
+  position: relative;
 }
 
 .container-fluid {
@@ -167,7 +172,7 @@
 
 .btn-default:hover,
 .btn-default:active {
-  background-color: @gray900;
+  background-color: @gray850;
 }
 
 .btn-orange {
@@ -179,6 +184,17 @@
 .btn-orange:active {
   background-color: @blue900;
 }
+
+.btn-dark {
+  color: @white;
+  background-color: @gray850;
+}
+
+.btn-dark:hover,
+.btn-dark:active {
+  background-color: @gray900;
+}
+
 
 .input {
   padding: 12px 18px;
@@ -552,6 +568,15 @@ br {
   padding-top: 3em;
 }
 
+.block-footer-contact {
+  height: 410px;
+
+  .bg-fw-half-left,
+  .bg-fw-half-right {
+    height: 410px;
+  }
+}
+
 .block-footer {
   color: @gray600;
   font-size: 13px;
@@ -651,95 +676,6 @@ br {
     top: 5em;
     right: 3em;
     z-index: 1;
-  }
-}
-
-.block-index-workflow {
-  background-color: @gray200;
-  .wrap-workflow {
-    width: 100%;
-    background-color: @white;
-    padding: 24px 16px 14px 16px;
-    border-radius: 8px;
-    position: relative;
-    .text-center;
-    .box-shadow;
-
-    .icon {
-      display: block;
-      margin: 0 auto;
-    }
-
-    .step-number {
-      color: @gray600;
-      font-size: 3em;
-      margin: 0;
-      padding: 0;
-      font-weight: 300;
-      .sofia;
-    }
-
-    .step-title {
-      margin: -9px 0 0 0;
-      padding: 0;
-      font-size: 1.2em;
-      .sofia;
-    }
-
-    .description {
-      color: @gray600;
-      font-size: 0.9em;
-    }
-
-    .workflow-flowline,
-    .workflow-flowcircle-left,
-    .workflow-flowcircle-right {
-      top: 50%;
-      position: absolute;
-    }
-
-    .workflow-flowcircle-left,
-    .workflow-flowcircle-right {
-      width: 16px;
-      height: 16px;
-      margin-left: -8px;
-      margin-top: -6px;
-    }
-
-    .workflow-flowline {
-      display: inline-block;
-      width: 2.8em;
-      height: 4px;
-      background-color: @blue800;
-      left: 100%;
-    }
-
-    .workflow-flowcircle-right {
-      display: inline-block;
-      background-color: @white;
-      border: 4px solid @blue800;
-      border-radius: 13px;
-      left: 100%;
-    }
-
-    .workflow-flowcircle-left {
-      display: inline-block;
-      background-color: @white;
-      border: 4px solid @blue800;
-      border-radius: 13px;
-      left: 0;
-    }
-  }
-
-  .active {
-    color: @white !important;
-    background-color: @blue800;
-
-    .step-number,
-    .step-title,
-    .description {
-      color: @white;
-    }
   }
 }
 
