--- a/embold.com/css/color-chart.less
+++ b/embold.com/css/color-chart.less
@@ -6,7 +6,9 @@
 @gray600: #A8ACB4;
 @gray700: #7C808B;
 @gray800: #2A3141;
+@gray850: #151A24;
 @gray900: #111317;
+@gray950: #090B0D;
 
 @mint800: #21ABB0;
 
