--- a/embold-blue.com/css/index-steps.less
+++ b/embold-blue.com/css/index-steps.less
@@ -46,7 +46,7 @@
   .workflow-3:hover {
     .wrap-animation {
       .index-step-3 {
-        background-image: url('../images/index-step-3-animate.svg');
+        // background-image: url('../images/index-step-3-animate.svg');
       }
     }
 
@@ -120,7 +120,7 @@
         background-color: @white;
         background-repeat: no-repeat;
         background-position: center center;
-        background-image: url('../images/index-step-3.svg');
+        // background-image: url('../images/index-step-3.svg');
         background-size: auto 100%;
         border-radius: 8px;
       }
