--- a/embold-blue.com/css/modal.less
+++ b/embold-blue.com/css/modal.less
@@ -27,15 +27,11 @@
   }
 
   .wrap-policy {
+    color: @gray700;
     padding-left: 6em;
     margin-bottom: 1em;
     .text-center;
   }
-}
-
-.modal-subscribe {
-  padding: 2em;
-  font-size: 1em;
 
   .table-no-border {
     width: 100%;
