adding svg animation

--- a/embold-blue.com/css/embold.less
+++ b/embold-blue.com/css/embold.less
@@ -1849,3 +1849,18 @@ section.press-releases {
     border-bottom: 0;
   }
 }
+
+.intercom {
+  width: 60px;
+  height: 60px;
+  bottom: 24px;
+  right: 24px;
+  position: fixed;
+  background-image: url('../images/intercom-icon-open.svg');
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-color: #0071b2;
+  background-position: center center;
+  border-radius: 30px;
+  z-index: 30;
+}
