--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -528,7 +528,7 @@
 .block-index-workflow .wrap-workflow .step-number {
   display: inline-block;
   color: #A8ACB4;
-  width: 1.2em;
+  width: 1.3em;
   height: 1.3em;
   font-size: 2.4em;
   margin: 0.4em;
@@ -541,7 +541,7 @@
 .block-index-workflow .wrap-workflow .step-title {
   margin: -9px 0 0 0;
   padding: 0;
-  font-size: 1.2em;
+  font-size: 1.4em;
   font-family: 'Sofia Pro', sans-serif;
   letter-spacing: -0.005em;
 }
@@ -2203,4 +2203,18 @@ section.press-releases {
 }
 .block-lists .wrap-item:last-of-type {
   border-bottom: 0;
+}
+.intercom {
+  width: 60px;
+  height: 60px;
+  bottom: 24px;
+  right: 24px;
+  position: fixed;
+  background-image: url('../images/intercom-icon-open.svg');
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-color: #0071b2;
+  background-position: center center;
+  border-radius: 30px;
+  z-index: 30;
 }
