--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -586,6 +586,19 @@
   border-radius: 13px;
   left: 0;
 }
+.block-index-workflow .index-arrow {
+  width: 50px;
+  height: 30px;
+  background-image: url('../images/index-arrow.svg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  position: absolute;
+  z-index: 9;
+}
+.block-index-workflow .arrow-1-2 {
+  right: -55px;
+  top: 96px;
+}
 .block-index-workflow .active {
   color: #fff !important;
   background-color: #21ABB0;
