--- a/embold-blue.com/css/index-steps.less
+++ b/embold-blue.com/css/index-steps.less
@@ -204,6 +204,21 @@
     }
   }
 
+  .index-arrow {
+    width: 50px;
+    height: 30px;
+    background-image: url('../images/index-arrow.svg');
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    position: absolute;
+    z-index: 9;
+  }
+
+  .arrow-1-2 {
+    right: -55px;
+    top: 96px;
+  }
+
   .active {
     color: @white !important;
     background-color: @blue800;
